# MWRP-CP3

./: .gitignore  CMakeLists.txt  README.md  TODO.md  paper.md  paper_data.md  solutions_found_ht_chantry.map_1_10.000000_astar.csv  solutions_found_ht_chantry.map_2_1.000000_moc_5.000000.csv  solutions_found_ht_chantry.map_2_1.000000_mwastar_10.000000.csv  solutions_found_ht_chantry.map_2_1.000000_mwastar_2.000000.csv  solutions_found_ht_chantry.map_2_1.000000_mwastar_3.000000.csv  solutions_found_ht_chantry.map_2_1.000000_mwastar_5.000000.csv  solutions_found_ht_chantry.map_3_1.000000_mwastar_2.000000.csv  solutions_found_ht_chantry.map_3_1.000000_mwastar_5.000000.csv  solutions_found_ht_chantry.map_3_1.000000_soc_2.000000.csv  solutions_found_ht_chantry.map_3_1.000000_soc_5.000000.csv  solver.json
configs/: 11_by_11_complex_task.json  11_by_11_complex_task_2.json  11_by_11_impossible.json  11_by_11_maze.json  11_by_11_maze_experiment.json  11_by_11_maze_hard.json  11_by_11_maze_same_start.json  13_by_13_maze.json  13_by_13_maze_experiment.json  13_by_13_maze_pruned.json  19_by_19_maze.json  19_by_19_maze_experiment.json  19_by_19_maze_solo.json  3232maze.json  big_maze.json  big_maze_test.json  big_maze_tight.json  big_maze_tight_duo.json  big_maze_tight_solo.json  big_maze_tight_with_srt.json  big_maze_tight_with_tasks.json  conflict_maze.json  conflict_maze2.json  custom_big.json  deadline_19.json  deadline_big.json  den101d.json  den207_test.json  edge_case.json  empty.json  figure1.json  figure3.json  format.md  laktest.json  mc_forest.json  mc_forest_3_robots.json  mc_forest_4_robots.json  mc_forest_doubled_solo.json  mc_forest_right.json  mc_forest_solo.json  (+16 more)
experiments/: ablation_experiment.py  analyze_ablation.py  analyze_pruning.py  anytime_experiment.py  calc_average.py  cmake_install.cmake  draw_anytime_graph.py  draw_graphs.py  draw_main_graph.py  draw_subopt_graph.py  main_experiment.py  main_experiment_results.csv  main_experiment_results_11by11_TSP.csv  main_experiment_results_3_and_more.csv  main_experiment_results_NEW.csv  main_experiment_results_ig.csv  main_experiment_results_prev.csv  main_experiment_results_test.csv  make_random.py  make_room.py  max_pivots_experiment.py  maze_map_scaling_results_lazy_test.csv  opt_better_experiment_results2.csv  opt_better_experiment_results3.csv  opt_better_experiment_results_ablation2.csv  opt_better_experiment_results_nonrandom2.csv  opt_experiment_results.csv  opt_experiment_results_2.csv  opt_experiment_results_3.csv  opt_experiment_results_test_2.csv  opt_methods_experiment.py  postprocess_pruning_experiment.py  random_start_experiment.py
include/: collisions.hpp  environment.hpp  file_utils.hpp  heirarchical_search.hpp  heuristics.hpp  los.hpp  mtsp.hpp  old.hpp  pathfinding.hpp  search.hpp  shared.hpp  utils.hpp  watchman.hpp  watchman_utils.hpp
maps/: custom-11-11.map  custom-13-13-less-obs.map  custom-13-13.map  custom-19-19.map  maze-32-32-2.map  mc-forest-doubled.map  mc-forest-left.map  mc-forest-right.map  mc-forest.map  random-10-10-20.map  random-10-10-25.map  random-10-10-35.map  random-13-13-33.map  random-15-15-45.map  random-15-15-56.map  random-15-15-78.map  random-17-17-57.map  random-20-20-100.map  random-20-20-140.map  random-20-20-80.map  random-25-25-125.map  random-25-25-156.map  random-25-25-93.map  random-30-30-135.map  random-30-30-180.map  random-30-30-225.map  room-12-16-4.map  room-16-16-4.map  room-20-20-4.map  room-24-24-4.map  room-32-32-8.map  test-conflicts-1.map  test-conflicts-2.map  test-fig-1.map  test-fig-3.map  test-pivots.map
scripts/: create_legend.py  double_map_size.py  draw_map_state.py  overlay_paths.py  process.py  replay_final.py  replay_search.py  replay_solution.py  view_map_state.py  view_map_state_raw.py  viz.py  watch.py
solutions/: ht_chantry_AMWAstar.csv  soc_new_60s_weight5.csv  soc_old_60s_weight5.csv  solutions_found_ht_chantry.map_2_60.000000_mwastar_5.000000.csv  (+2 more)
src/: main.cpp  old.cpp  (+5 more)
(+110 files in other folders)
